# nbseq

./: LICENSE  README.md  environment-min.yaml  environment.yaml  pyproject.toml  setup.cfg  setup.py
nbseq/: __init__.py  cdrs.py  cloning.py  design.py  distance.py  ft.py  hash.py  msa.py  nbseq.py  ordination.py  peptide.py  pheno.py  predict.py  resynth.py  tidy.py  utils.py
nbseq/asvs/: __init__.py  align.py  asvs.py  cluster.py  db.py  distance.py
nbseq/norm/: __init__.py  scran.R
nbseq/prep/: barcodes.py  qc.py
nbseq/select/: __init__.py  deseq2.R  lme4.R
nbseq/viz/: __init__.py  asv.py  dash.py  etc.py  logo.py  ord.py  predict.py  qc.py  sample.py  syntax.py  tree.py  utils.py
