[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nbseq"
authors = [
  { name="Casey Grun", email="casey.grun@yale.edu" },
]
description = "Routines for processing VHH-seq data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version>="3.9"',
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/caseygrun/nbseq"
Issues = "https://github.com/caseygrun/nbseq/issues"

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
# 
# [project.scripts]
# my-script = "nbseq.module:function"


[tool.setuptools.dynamic]
version = {attr = "nbseq.version.__version__"}