[metadata]
name = nbseq
version = attr: nbseq.__version__
author = Casey Grun
author_email = casey.grun@yale.edu
description = Routines for processing VHH-seq data
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =nbseq
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where=nbseq